# BigInt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: AST.hpp  BigInt.hpp  Lexer.hpp  Parser.hpp  Token.hpp  Utils.hpp
src/: BigInt.cpp  Lexer.cpp  Parser.cpp  main.cpp
tests/: test_BigInt.cpp  test_BigInt_add.cpp  test_BigInt_mult.cpp  test_LargeNumbers.cpp  test_Lexer.cpp  test_Parser.cpp
